	   file (Closes: #394935)
        mysql:
	 . Fixed case where odd combination of configuration options caused sqldump
	   backups to get overwritten with an empty file (Closes: #402679)
	pgsql:
	 . Support configuring PGSQLUSER for real, and document it a bit; this
	   broken support actually prevented pgsql handler to work for VServers
	   (Closes: #396578)
	rdiff:
	 . Added cstream support to allow for bandwidth limiting
	 . Handle "keep = yes" to disable old backups removal (Closes: #424633)
	 . Ignore rdiff-backup minor versions (thanks Sami Haahtinen)
	rub
	 . Fixed typo in rub handler that caused it to not work
	 . Changed to use lib/vserver code
	 . Fixed fsck error
	 . Fixed integer comparison (Closes: Trac#3)
	sys:
	 . Fixed typo breaking things for VServers.
	 . Fix bug when vrootdir is on its own partition (Closes: #395928)
	 . Better sfdisk error and output handling: should now properly warn
	   when it does not manage to backup a partition table, and shut up when
	   it succeeds (Closes: #396632)
	 . Added option to not use sfdisk at all, useful for vserver/xen instances
	   that produce warnings about no harddisks found (Closes: #404071)
	 . Fixed example in example.sys to detail the __star__ in partitionsfile and
	   note why its necessary (Closes: #409192)
	 . Force C locale for sfdisk to ensure english words are found in grep
    fixed 'make install' bug that failed if /etc/backup.d already existed
    changed spaces to tabs in Makefile.am
    updated examples/Makefile.am and handlers/Makefile.am to include rsnap/rub
    files (Closes: #440554)
    

version 0.9.4 -- October 6th, 2006
    backupninja changes
	 . Fixed bug in toint(), and thus isnow(), which caused it
	   to not work when run from cron.
	 . Recursively ignore subdirs in /etc/backup.d (Closes: #361102)
	 . Add admingroup option to configuration to allow a group that can
	   read/write configurations (instead of only allowing root). Checks